--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "eslint-config-next": "15.3.4",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "prisma": "^6.10.1",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
