--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^1.0.0",
     "uuid": "^11.1.0",
     "zod": "^3.25.67"
   },
