--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
     "fontawesome": "^5.6.3",
+    "jose": "^6.0.11",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
