--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.1",
+    "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^1.0.0",
     "uuid": "^11.1.0",
