--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
+    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
     "fontawesome": "^5.6.3",
     "jose": "^6.0.11",
