--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.10.1",
-    "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^6.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^3.0.2",
     "fontawesome": "^5.6.3",
     "jose": "^6.0.11",
     "next": "15.3.4",
