--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.58.1",
     "swr": "^2.3.3",
     "tailwind-merge": "^3.3.1",
@@ -36,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-google-recaptcha": "^2.1.9",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "prettier": "^3.5.3",
